--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Wayne Industries</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="static/css/auth/login.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/auth/login.css') }}">
 </head>
 <body>
     <div class="container d-flex flex-column align-items-center justify-content-center" style="min-height: 90vh;">
