--- a/app/templates/auth/alterar_senha.html
+++ b/app/templates/auth/alterar_senha.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %}
 {% block content %}
 <div class="container mt-5" style="max-width: 400px;">
-    <h3 class="mb-4 text-center">Alterar Senha</h3>
+    <h3 class="mb-4 text-center" style="color: #ffc107;">Alterar Senha</h3>
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
         {% for category, message in messages %}
@@ -15,16 +15,16 @@
     <form method="post">
         {% if request.endpoint == 'auth.alterar_senha' %}
         <div class="mb-3">
-            <label for="senha_atual" class="form-label">Senha Atual</label>
+            <label for="senha_atual" class="form-label" style="color: #ffc107;">Senha Atual</label>
             <input type="password" class="form-control" id="senha_atual" name="senha_atual" required>
         </div>
         {% endif %}
         <div class="mb-3">
-            <label for="nova_senha" class="form-label">Nova Senha</label>
+            <label for="nova_senha" class="form-label" style="color: #ffc107;">Nova Senha</label>
             <input type="password" class="form-control" id="nova_senha" name="nova_senha" required>
         </div>
         <div class="mb-3">
-            <label for="confirmar_senha" class="form-label">Confirmar Nova Senha</label>
+            <label for="confirmar_senha" class="form-label" style="color: #ffc107;">Confirmar Nova Senha</label>
             <input type="password" class="form-control" id="confirmar_senha" name="confirmar_senha" required>
         </div>
         <button type="submit" class="btn btn-primary w-100">Alterar Senha</button>
