--- a/app/templates/components/menu_lateral.html
+++ b/app/templates/components/menu_lateral.html
@@ -9,31 +9,25 @@
         <i class="bi bi-speedometer2"></i> Dashboard
       </a>
     </li>
-    <li>
-      <a href="{{ url_for('usuarios.listar_usuarios') }}" class="nav-link text-white">
-        <i class="bi bi-people"></i> Usuários
-      </a>
-    </li>
-    <li>
-      <a href="" class="nav-link text-white">
-        <i class="bi bi-shield-lock"></i> Níveis de Acesso
-      </a>
-    </li>
-    <li>
-      <a href="" class="nav-link text-white">
-        <i class="bi bi-key"></i> Recursos
-      </a>
-    </li>
-    <li>
-      <a href=" class="nav-link text-white">
-        <i class="bi bi-clock-history"></i> Atividades e Logs
-      </a>
-    </li>
-    <li>
-      <a href="" class="nav-link text-white">
-        <i class="bi bi-key"></i> Alterar Senha
-      </a>
-    </li>
+    {% if current_user.is_authenticated and current_user.nivel.nome == 'Administrador' %}
+      <li>
+        <a href="{{ url_for('usuarios.listar_usuarios') }}" class="nav-link text-white">
+          <i class="bi bi-people"></i> Usuários
+        </a>
+      </li>
+      <li>
+        <a href="{{ url_for('niveis.listar_niveis') }}" class="nav-link text-white">
+          <i class="bi bi-shield-lock"></i> Níveis de Acesso
+        </a>
+      </li>
+    {% endif %}
+    {% if current_user.is_authenticated and current_user.nivel.nome in ['Administrador', 'Gerente'] %}
+      <li>
+        <a href="{{ url_for('recursos.recursos') }}" class="nav-link text-white">
+          <i class="bi bi-key"></i> Recursos
+        </a>
+      </li>
+    {% endif %}
     <li>
       <a href="{{ url_for('auth.logout') }}" class="nav-link text-white">
         <i class="bi bi-box-arrow-right"></i> Sair
