--- a/app/templates/pages/dashboard.html
+++ b/app/templates/pages/dashboard.html
@@ -1,7 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% block content %}
 <div class="d-flex">
-    {% include 'components/menu_lateral.html' %}
     <main class="flex-grow-1 p-4" style="background: #181a1b; min-height: 100vh;">
         <h1 class="mb-4" style="font-weight: 700; color: #ffc107;">Bem-vindo ao Painel Wayne Industries</h1>
         <div class="row g-4">
@@ -9,7 +8,7 @@
                 <div class="card bg-dark text-white shadow">
                     <div class="card-body">
                         <h5 class="card-title">Usuários Ativos</h5>
-                        <p class="card-text display-6">42</p>
+                        <p class="card-text display-6">{{ usuarios_ativos }}</p>
                     </div>
                 </div>
             </div>
@@ -17,7 +16,7 @@
                 <div class="card bg-dark text-white shadow">
                     <div class="card-body">
                         <h5 class="card-title">Níveis de Acesso</h5>
-                        <p class="card-text display-6">3</p>
+                        <p class="card-text display-6">{{ niveis_count }}</p>
                     </div>
                 </div>
             </div>
@@ -25,7 +24,7 @@
                 <div class="card bg-dark text-white shadow">
                     <div class="card-body">
                         <h5 class="card-title">Último Login</h5>
-                        <p class="card-text">{{ current_user.nome if current_user.is_authenticated else '' }}<br>{{ current_user.ultimo_acesso if current_user.is_authenticated else '' }}</p>
+                        <p class="card-text">{{ current_user.nome if current_user.is_authenticated else '' }}
                     </div>
                 </div>
             </div>
